# hop

./: .gitignore  Cargo.toml  README.md  SPEC.md  install.sh
.forgejo/workflows/: release.yml
.github/workflows/: ci.yml  release.yml
docs/: v1.3.0-dev.md
src/: cli.rs  completions.rs  config.rs  db.rs  doctor.rs  import.rs  index.rs  init.rs  lib.rs  main.rs  picker.rs  score.rs  style.rs
tests/: cli.rs  features.rs
