[package]
name = "fuzzy-cd"
version = "0.3.0"
edition = "2024"

[lib]
name = "fuzzy_cd"
path = "src/lib.rs"

[[bin]]
name = "fuzzy-cd"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
fuzzy-matcher = "0.3"
directories = "6"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
