[package]
name = "hop"
version = "1.3.1"
edition = "2021"
rust-version = "1.75"
description = "A smarter cd: fuzzy directory jumping with learned history, bookmarks, and optional filesystem index."
license = "MIT"
repository = "https://github.com/di0xus/hop"
homepage = "https://github.com/di0xus/hop"
readme = "README.md"
keywords = ["cd", "fuzzy", "directory", "navigation", "cli"]
categories = ["command-line-utilities", "filesystem"]

[lib]
name = "hop"
path = "src/lib.rs"

[[bin]]
name = "hop"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
fuzzy-matcher = "0.3"
directories = "6"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
rmp-serde = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
